# desktop-sdk

./: .gitignore  3DPARTY.md  README.md
ChromiumBasedEditors/app/install/: Makefile
ChromiumBasedEditors/app/install/apt-rpm/: ivolgapro-desktopeditors.spec
ChromiumBasedEditors/app/test/: ASCDocumentEditor.pro  main.cpp  mainwindow.cpp  qmainpanel.cpp
ChromiumBasedEditors/app/test/src/: ASCDocumentEditor.pro  ASCDocumentEditor_mac.pro  AscDocumentEditor.pri  QAscApplicationManager.h  QAscEditorWidget.h  QAscMain.h  QAscMainPanel.cpp  QAscMainPanel.h  QAscTabWidget.h
ChromiumBasedEditors/lib/: AscDocumentsCore_base.pri  AscDocumentsCore_base_xp.pri  AscDocumentsCore_linux.pri  AscDocumentsCore_linux.pro  AscDocumentsCore_mac.pro  AscDocumentsCore_win.pro  AscDocumentsCore_windows.pri  AscDocumentsCore_windows.pro  ascdocumentscore.pri  ascdocumentscore.pro  ascdocumentscore_helper.pro  helper.exe.manifest  helper_main.cpp
ChromiumBasedEditors/lib/ASCDocumentEditor Helper/ONLYOFFICE Helper.xcodeproj/: project.pbxproj
ChromiumBasedEditors/lib/ascdocumentscore Helper/ONLYOFFICE Helper.xcodeproj/: project.pbxproj
ChromiumBasedEditors/lib/ascdocumentscore Helper/ascdocumentscore Helper/: Info.plist
ChromiumBasedEditors/lib/ascdocumentscore/ascdocumentscore.xcodeproj/: project.pbxproj
ChromiumBasedEditors/lib/cef_pri/: cef_base.pri  cef_base_xp.pri  cef_client.pri  cef_client_xp.pri
ChromiumBasedEditors/lib/cef_pri_103/: cef_base.pri  cef_client.pri
ChromiumBasedEditors/lib/cef_pri_106/: cef_base.pri
ChromiumBasedEditors/lib/cef_pri_107/: cef_base.pri  cef_client.pri
ChromiumBasedEditors/lib/cef_pri_138/: cef_base.pri  cef_client.pri
ChromiumBasedEditors/lib/cef_pri_87/: cef_base.pri  cef_client.pri
ChromiumBasedEditors/lib/include/: applicationmanager.h  applicationmanager_events.h  base.h  cefapplication.h  cefview.h  frame_id_wrapper.h  keyboardchecker.h  keychain.h  mac_application.h  mac_cefview.h  mac_cefviewmedia.h  nsascprinter.h  qascprinter.h  spellchecker.h
ChromiumBasedEditors/lib/qcefview/: qcefview.cpp  qcefview.h  qcefview_media.cpp  qcefview_media.h
ChromiumBasedEditors/lib/qt_wrapper/: qtascdocumentscore.pro
ChromiumBasedEditors/lib/qt_wrapper/include/: qascapplicationmanager.h  qascprinter.h  qcefview.h  qcefview_media.h  qdpichecker.h  qexternalmessageloop.h
ChromiumBasedEditors/lib/qt_wrapper/src/: qascapplicationmanager.cpp  qascprinter.cpp  qcefview.cpp  qcefview_media.cpp  qdpichecker.cpp  qexternalmessageloop.cpp
ChromiumBasedEditors/lib/src/: Logger.h  aes256.cpp  applicationmanager.cpp  applicationmanager_p.h  cefapplication.cpp  ceffiledownloader.h  cefview.cpp  cloud_crypto.h  cookiesworker.h  crossplatformfile.h  crossplatformfilelocker.h  crypto_mode.cpp  crypto_mode.h  fileconverter.h  filedownloader.h  filedownloader.mm  filelocker.cpp  filelocker.h  fileprinter.cpp  fileprinter.h  keyboardchecker.cpp  keyboardlayout.cpp  keyboardlayout.h  keychain.cpp  mac_application.mm  mac_cefview.mm  mac_cefviewmedia.mm  mac_common.h  mac_common.mm  mac_keyboardlayout.h  mac_keyboardlayout.mm  mailto.h  nativeviewer.h  plugins.h  plugins_resources.h  providers.h  spellchecker.cpp  support.h  templatesmanager.h  utils.h  (+6 more)
ChromiumBasedEditors/lib/src/additional/: create.cpp  manager.h  renderer.h
ChromiumBasedEditors/lib/src/cef/linux/tests/ceftests/: BUILD.bazel  CMakeLists.txt
ChromiumBasedEditors/lib/src/cef/linux/tests/shared/: BUILD.bazel
ChromiumBasedEditors/lib/src/cef/linux/tests/shared/browser/: client_app_browser.h  extension_util.cc
ChromiumBasedEditors/lib/src/cef/linux/tests/shared/renderer/: client_app_renderer.h
ChromiumBasedEditors/lib/src/cef_138/linux/tests/cefclient/: BUILD.bazel  CMakeLists.txt
ChromiumBasedEditors/lib/src/cef_138/linux/tests/cefclient/browser/: client_handler.cc  main_context_impl.cc  root_window_gtk.cc
ChromiumBasedEditors/lib/src/cef_138/linux/tests/cefsimple/: BUILD.bazel
ChromiumBasedEditors/lib/src/cefwrapper/: client_app.h  client_renderer.h  client_renderer_params.h  client_renderer_wrapper.cpp  client_resource_handler_async.cpp  client_resource_handler_async.h  client_scheme.h  client_scheme_wrapper.cpp  external_process.h  external_process_with_childs.h  monitor_info.cpp  monitor_info.h
ChromiumBasedEditors/lib/src/extension/: cloudcrypto.js  simplerequest.js
ChromiumBasedEditors/lib/tools/: tools.cpp  tools.h
ChromiumBasedEditors/plugins/ai-agent/: .gitignore  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
ChromiumBasedEditors/plugins/audio/: code.js  config.json  index.html
ChromiumBasedEditors/plugins/manager/: code.js  config.json  index.html
ChromiumBasedEditors/plugins/sendto/: config.json
ChromiumBasedEditors/plugins/video/: config.json  index.html
ChromiumBasedEditors/plugins/{060E6A7D-2766-44E8-A0EE-9A8CB9DB00D1}/: code.js  image.emf
ChromiumBasedEditors/plugins/{8D67F3C5-7736-4BAE-A0F2-8C7127DC4BB8}/: code.js  config.json  index.html
ChromiumBasedEditors/plugins/{B509123E-6335-40BD-B965-91EB799346E3}/: code.js  config.json
ChromiumBasedEditors/plugins/{F7E59EB4-317E-4E0B-AB2C-58E038A59EE2}/: code.js
ChromiumBasedEditors/videoplayerlib/: IconsVideoPlayerLib.qrc  linux_gstreamer_deps.txt  qascvideoview.h  qfooterpanel.h  qwidgetutils.h  videoplayerlib.pri  videoplayerlib.pro  videoplayerlib_deps.pri
ChromiumBasedEditors/videoplayerlib/src/: lib_base.cpp  lib_base.h  qascmediaplayer.h  qascvideoview.cpp  qascvideowidget.cpp  qascvideowidget.h  qfooterpanel.cpp  qfooterpanel.h  qfooterpanel_private.h  qiconpushbutton.cpp  qiconpushbutton.h  qmultimedia.h  qpushbutton_icons.cpp  qpushbutton_icons.h  qtimelabel.cpp  qtimelabel.h  qvideoplaylist.cpp  qvideoplaylist.h  qvideoslider.cpp  qvideoslider.h  qwidgetutils.cpp  videoplayerlib_export.h
HtmlFile/Internal/: Internal.pro  Internal_linux.pri  Internal_windows.pri
HtmlFile/Internal/src/: client_app.h  client_renderer_wrapper.cpp  clienthandler.h  main.cpp  main_linux.cpp  main_windows.cpp
(+1035 files in other folders)
